fix chat-tabs and chat overlap

--- a/src/modules/Chat/style.less
+++ b/src/modules/Chat/style.less
@@ -1,11 +1,8 @@
 @import '../../style/mixins';
 
 .chat {
-  position: absolute;
-  top: @top-height;
-  left: 0;
-  right: 0;
-  bottom: @bottom-height;
+  width: 100%;
+  height: 100%;
 
   .border-left();
 
