--- a/src/modules/ChatContainer/style.less
+++ b/src/modules/ChatContainer/style.less
@@ -1,6 +1,16 @@
+@import '../../style/mixins';
+
 .empty-chat-card {
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+}
+
+.chat-container {
+  position: absolute;
+  top: @top-height;
+  left: 0;
+  right: 0;
+  bottom: @bottom-height;
 }
